--- a/code/ml_baseline.ipynb
+++ b/code/ml_baseline.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -90,15 +90,16 @@
     "def evaluate(df, labelCols, metrics=[\"f1\", \"weightedPrecision\", \"weightedRecall\", \"accuracy\"]):\n",
     "    evaluator = MulticlassClassificationEvaluator()\n",
     "    labelCols2 = [i+\"_pred\" for i in labelCols]\n",
-    "    df2 = df.withColumn(\"_label\", concat_udf(F.array(labelCols)))\n",
-    "    df2 = df2.withColumn(\"_pred\", concat_udf(F.array(labelCols2)))\n",
     "    \n",
     "    output = {}\n",
     "    for m in metrics:\n",
-    "        result = evaluator.evaluate(df2, {evaluator.metricName: m,\n",
-    "                                         evaluator.predictionCol: \"_pred\",\n",
-    "                                         evaluator.labelCol: \"_label\"})\n",
-    "        output[m] = result\n",
+    "        results = []\n",
+    "        for i in xrange(len(labelCols)):\n",
+    "            r = evaluator.evaluate(df, {evaluator.metricName: m,\n",
+    "                                        evaluator.predictionCol: labelCols2[i],\n",
+    "                                        evaluator.labelCol: labelCols[i]})\n",
+    "            results.append(r)\n",
+    "        output[m] = sum(results) / len(results)\n",
     "        \n",
     "    return output\n",
     "\n",
@@ -137,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -183,13 +184,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Evaluate with our data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Random Forest"
    ]
   },
@@ -202,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -248,92 +242,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Evaluate with our data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Run Experiments"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train: 30400\n",
-      "Test: 10162\n",
-      "+------+----+----+-----+----+-----+-----+-----+-----+----+----+--------------------+\n",
-      "|    id|4019|2724|25000|4280|41401|53081|51881|42731|5849|5990|            features|\n",
-      "+------+----+----+-----+----+-----+-----+-----+-----+----+----+--------------------+\n",
-      "|100050|   0|   0|    0|   1|    1|    1|    0|    1|   0|   1|(40000,[69,78,104...|\n",
-      "|100053|   0|   0|    1|   0|    0|    0|    0|    1|   0|   0|(40000,[794,2044,...|\n",
-      "|100059|   1|   0|    1|   0|    1|    0|    0|    0|   0|   0|(40000,[130,207,3...|\n",
-      "|100061|   0|   0|    0|   1|    0|    0|    0|    0|   1|   0|(40000,[24,151,20...|\n",
-      "|100281|   0|   0|    0|   1|    1|    0|    0|    1|   0|   0|(40000,[30,48,78,...|\n",
-      "|100282|   0|   0|    0|   1|    0|    0|    0|    0|   1|   0|(40000,[379,585,7...|\n",
-      "|100289|   0|   0|    0|   0|    0|    0|    0|    0|   1|   0|(40000,[228,574,1...|\n",
-      "|100290|   1|   0|    0|   0|    1|    0|    0|    0|   0|   0|(40000,[1,20,115,...|\n",
-      "|100292|   0|   1|    0|   0|    0|    0|    1|    0|   1|   0|(40000,[115,207,5...|\n",
-      "|100294|   1|   0|    0|   0|    0|    0|    0|    1|   0|   0|(40000,[207,574,5...|\n",
-      "|100511|   1|   0|    0|   0|    0|    0|    0|    0|   0|   0|(40000,[207,273,2...|\n",
-      "|100517|   1|   1|    1|   1|    0|    0|    0|    1|   0|   0|(40000,[48,63,71,...|\n",
-      "|100742|   0|   1|    0|   0|    0|    0|    0|    1|   0|   0|(40000,[1,48,104,...|\n",
-      "|100746|   1|   0|    0|   0|    0|    0|    0|    0|   0|   1|(40000,[794,954,1...|\n",
-      "|100747|   0|   1|    0|   0|    0|    0|    0|    0|   0|   0|(40000,[187,207,2...|\n",
-      "|100748|   1|   0|    0|   0|    1|    0|    0|    0|   0|   0|(40000,[135,273,2...|\n",
-      "|100749|   1|   1|    0|   0|    0|    0|    1|    0|   1|   0|(40000,[35,122,12...|\n",
-      "|100753|   0|   0|    1|   1|    0|    0|    1|    0|   0|   0|(40000,[462,600,7...|\n",
-      "|100754|   0|   0|    0|   0|    1|    0|    0|    0|   0|   0|(40000,[20,32,48,...|\n",
-      "|100974|   0|   0|    1|   0|    0|    0|    0|    0|   0|   0|(40000,[794,890,1...|\n",
-      "+------+----+----+-----+----+-----+-----+-----+-----+----+----+--------------------+\n",
-      "only showing top 20 rows\n",
-      "\n",
-      "+------+----+----+-----+----+-----+-----+-----+-----+----+----+--------------------+\n",
-      "|    id|4019|2724|25000|4280|41401|53081|51881|42731|5849|5990|            features|\n",
-      "+------+----+----+-----+----+-----+-----+-----+-----+----+----+--------------------+\n",
-      "|100063|   1|   0|    0|   0|    0|    0|    1|    0|   0|   0|(40000,[115,187,2...|\n",
-      "|100283|   1|   0|    1|   0|    0|    0|    1|    1|   0|   0|(40000,[32,43,162...|\n",
-      "|100284|   0|   1|    1|   0|    1|    0|    0|    0|   0|   0|(40000,[312,794,1...|\n",
-      "|100522|   0|   0|    0|   1|    0|    1|    0|    0|   0|   1|(40000,[32,71,73,...|\n",
-      "|100524|   0|   0|    0|   0|    0|    0|    1|    1|   0|   0|(40000,[69,112,12...|\n",
-      "|100525|   0|   0|    0|   1|    0|    0|    1|    1|   0|   0|(40000,[32,100,20...|\n",
-      "|101211|   0|   0|    0|   1|    0|    0|    0|    0|   0|   1|(40000,[78,92,122...|\n",
-      "|101440|   1|   0|    0|   1|    1|    0|    0|    0|   0|   0|(40000,[794,848,1...|\n",
-      "|101661|   0|   0|    0|   0|    1|    0|    0|    0|   0|   0|(40000,[196,207,2...|\n",
-      "|101902|   1|   1|    1|   0|    1|    1|    0|    0|   0|   0|(40000,[379,676,7...|\n",
-      "|101903|   1|   0|    0|   0|    0|    0|    0|    0|   0|   0|(40000,[152,794,2...|\n",
-      "|102127|   0|   1|    1|   0|    1|    0|    0|    0|   0|   0|(40000,[69,273,35...|\n",
-      "|102359|   0|   0|    0|   1|    1|    0|    0|    0|   0|   0|(40000,[60,233,46...|\n",
-      "|102589|   0|   0|    0|   0|    0|    0|    0|    1|   0|   0|(40000,[62,78,91,...|\n",
-      "|102821|   0|   1|    0|   0|    0|    0|    0|    0|   1|   0|(40000,[32,128,20...|\n",
-      "|103041|   1|   0|    0|   0|    0|    0|    1|    1|   1|   0|(40000,[794,1004,...|\n",
-      "|103045|   1|   0|    0|   1|    0|    0|    0|    1|   1|   0|(40000,[71,115,57...|\n",
-      "|103050|   0|   0|    1|   0|    0|    0|    0|    0|   0|   0|(40000,[48,103,13...|\n",
-      "|103053|   0|   0|    0|   0|    0|    0|    1|    0|   0|   0|(40000,[21,69,100...|\n",
-      "|103511|   0|   0|    0|   0|    0|    0|    1|    0|   0|   0|(40000,[75,85,122...|\n",
-      "+------+----+----+-----+----+-----+-----+-----+-----+----+----+--------------------+\n",
-      "only showing top 20 rows"
-     ]
-    }
-   ],
-   "source": [
-    "df = read_csv(\"/HdiNotebooks/DATA_TFIDF_HADM_TOP10.csv\")\n",
-    "df_train, df_test = df.randomSplit(weights=[0.75, 0.25], seed=12345)\n",
-    "df_train.cache()\n",
-    "df_test.cache()\n",
-    "print \"Train:\", df_train.count()\n",
-    "print \"Test:\", df_test.count()\n",
-    "df_train.show()\n",
-    "df_test.show()"
    ]
   },
   {
@@ -342,47 +251,56 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "maxIter:  5\n",
-      "{'weightedPrecision': 0.32422971544867885, 'f1': 0.2487607767288541, 'weightedRecall': 0.26467105263157803, 'accuracy': 0.264671052631579}\n",
-      "{'weightedPrecision': 0.10921601442253366, 'f1': 0.09381365749094564, 'weightedRecall': 0.12595945679984275, 'accuracy': 0.12595945679984255}\n",
-      "maxIter:  10\n",
-      "{'weightedPrecision': 0.7887577146619332, 'f1': 0.7696060340197072, 'weightedRecall': 0.7609539473684176, 'accuracy': 0.760953947368421}\n",
-      "{'weightedPrecision': 0.1290803781671321, 'f1': 0.1253548498061775, 'weightedRecall': 0.13225742963983492, 'accuracy': 0.13225742963983467}\n",
-      "maxIter:  25\n",
-      "{'weightedPrecision': 0.9998710805070459, 'f1': 0.9998681263464682, 'weightedRecall': 0.9998684210526279, 'accuracy': 0.9998684210526316}\n",
-      "{'weightedPrecision': 0.10314755726388049, 'f1': 0.09796554367340238, 'weightedRecall': 0.09781539067112782, 'accuracy': 0.09781539067112772}\n",
-      "maxIter:  50\n",
-      "{'weightedPrecision': 0.9999999999999962, 'f1': 0.9999999999999962, 'weightedRecall': 0.9999999999999962, 'accuracy': 1.0}\n",
-      "{'weightedPrecision': 0.10355121204655478, 'f1': 0.09825534639138672, 'weightedRecall': 0.09781539067112782, 'accuracy': 0.09781539067112772}\n",
-      "maxIter:  75\n",
-      "{'weightedPrecision': 0.9999999999999962, 'f1': 0.9999999999999962, 'weightedRecall': 0.9999999999999962, 'accuracy': 1.0}\n",
-      "{'weightedPrecision': 0.10355121204655478, 'f1': 0.09825534639138672, 'weightedRecall': 0.09781539067112782, 'accuracy': 0.09781539067112772}\n",
-      "maxIter:  100\n",
-      "{'weightedPrecision': 0.9999999999999962, 'f1': 0.9999999999999962, 'weightedRecall': 0.9999999999999962, 'accuracy': 1.0}\n",
-      "{'weightedPrecision': 0.10355121204655478, 'f1': 0.09825534639138672, 'weightedRecall': 0.09781539067112782, 'accuracy': 0.09781539067112772}"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for maxIter in [5, 10, 25, 50, 75, 100]:\n",
-    "    clr = CustomLogisticRegression()\n",
-    "    clr.fit(df_train, maxIter=maxIter)\n",
-    "    df_pred_train = clr.predict(df_train)\n",
-    "    df_pred_test = clr.predict(df_test)\n",
+    "def print_latex(inum, m1, m2, m3, m4):\n",
+    "    r1 = \"{weightedPrecision:.4f} & {weightedRecall:.4f} & {f1:.4f} & {accuracy:.4f}\".format(**m1)\n",
+    "    r2 = \"{weightedPrecision:.4f} & {weightedRecall:.4f} & {f1:.4f} & {accuracy:.4f}\".format(**m2)\n",
+    "    r3 = \"{accuracy:.4f}\".format(**m3)\n",
+    "    r4 = \"{accuracy:.4f}\".format(**m4)\n",
+    "    return \"{0} & {1} & {2} & {3} & {4} \\\\\\\\ \\hline\".format(inum, r1, r3, r2, r4)\n",
+    "    \n",
+    "def run_experiment(input_name):\n",
+    "    df_train = read_csv(\"{0}_train.csv\".format(input_name))\n",
+    "    df_val = read_csv(\"{0}_val.csv\".format(input_name))\n",
+    "    df_test = read_csv(\"{0}_test.csv\".format(input_name))\n",
     "\n",
-    "    print \"maxIter: \", maxIter\n",
-    "    print evaluate(df_pred_train, clr.labelCols)\n",
-    "    print evaluate(df_pred_test, clr.labelCols)"
+    "    df_train = df_train.union(df_val)\n",
+    "    \n",
+    "    df_train.cache()\n",
+    "    df_test.cache()\n",
+    "    \n",
+    "    print input_name\n",
+    "    print \"Train, Test:\", df_train.count(), df_test.count()\n",
+    "    print \"iter & train prec & recall & f1 & accuracy & em & test prec & recall & f1 & accuracy & em\"\n",
+    "    for maxIter in [5, 10, 25, 50, 75, 100]:\n",
+    "        clr = CustomLogisticRegression()\n",
+    "        clr.fit(df_train, maxIter=maxIter)\n",
+    "        df_pred_train = clr.predict(df_train)\n",
+    "        df_pred_test = clr.predict(df_test)\n",
+    "\n",
+    "        r1 = evaluate(df_pred_train, clr.labelCols)\n",
+    "        r2 = evaluate(df_pred_test, clr.labelCols)\n",
+    "        r3 = evaluate_em(df_pred_train, clr.labelCols, metrics=[\"accuracy\"])\n",
+    "        r4 = evaluate_em(df_pred_test, clr.labelCols, metrics=[\"accuracy\"])\n",
+    "        \n",
+    "        print print_latex(maxIter, r1, r2, r3, r4)\n",
+    "        \n",
+    "#     for maxDepth in [5, 10, 20, 30]:\n",
+    "#         clr = CustomRandomForestClassifier()\n",
+    "#         clr.fit(df_train, maxDepth=maxDepth)\n",
+    "#         df_pred_train = clr.predict(df_train)\n",
+    "#         df_pred_test = clr.predict(df_test)\n",
+    "\n",
+    "#         print \"maxDepth: \", maxDepth\n",
+    "#         print evaluate(df_pred_train, clr.labelCols)\n",
+    "#         print evaluate(df_pred_test, clr.labelCols)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -391,31 +309,59 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "maxDepth:  5\n",
-      "{'weightedPrecision': 0.06003821647001132, 'f1': 0.02490492183351698, 'weightedRecall': 0.06743421052631579, 'accuracy': 0.06743421052631579}\n",
-      "{'weightedPrecision': 0.06822878344400911, 'f1': 0.022155707150682047, 'weightedRecall': 0.06366856917929542, 'accuracy': 0.06366856917929542}\n",
-      "maxDepth:  10\n",
-      "{'weightedPrecision': 0.13480532836332554, 'f1': 0.06533599216963552, 'weightedRecall': 0.10861842105263164, 'accuracy': 0.10861842105263157}\n",
-      "{'weightedPrecision': 0.07147709071387036, 'f1': 0.04029352952448755, 'weightedRecall': 0.08364495178114549, 'accuracy': 0.08364495178114545}\n",
-      "maxDepth:  20\n",
-      "{'weightedPrecision': 0.4457382831587539, 'f1': 0.2741693567900213, 'weightedRecall': 0.29098684210526216, 'accuracy': 0.29098684210526315}\n",
-      "{'weightedPrecision': 0.08816127543442014, 'f1': 0.06109304953121328, 'weightedRecall': 0.10096437709112385, 'accuracy': 0.1009643770911238}\n",
-      "maxDepth:  30\n",
-      "{'weightedPrecision': 0.6360990909870188, 'f1': 0.48942733688808804, 'weightedRecall': 0.48480263157894515, 'accuracy': 0.4848026315789474}\n",
-      "{'weightedPrecision': 0.10370873560138762, 'f1': 0.07552076371132027, 'weightedRecall': 0.11070655382798665, 'accuracy': 0.11070655382798662}"
+      "./data/DATA_TFIDFV0_HADM_TOP10\n",
+      "Train, Test: 39544 13182\n",
+      "iter & train prec & recall & f1 & accuracy & test prec & recall & f1 & accuracy \n",
+      "5 & 0.8833 & 0.8848 & 0.8702 & 0.8848 & 0.3809 & 0.8244 & 0.8417 & 0.8163 & 0.8417 & 0.2704 \\\\ \\hline\n",
+      "10 & 0.9699 & 0.9701 & 0.9697 & 0.9701 & 0.7916 & 0.8293 & 0.8411 & 0.8328 & 0.8411 & 0.2558 \\\\ \\hline\n",
+      "25 & 0.9999 & 0.9999 & 0.9999 & 0.9999 & 0.9991 & 0.8121 & 0.8206 & 0.8156 & 0.8206 & 0.2189 \\\\ \\hline\n",
+      "50 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 0.8104 & 0.8190 & 0.8140 & 0.8190 & 0.2176 \\\\ \\hline\n",
+      "75 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 0.8104 & 0.8190 & 0.8140 & 0.8190 & 0.2176 \\\\ \\hline\n",
+      "100 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 0.8104 & 0.8190 & 0.8140 & 0.8190 & 0.2176 \\\\ \\hline\n",
+      "./data/DATA_TFIDFV1_HADM_TOP10\n",
+      "Train, Test: 39544 13182\n",
+      "iter & train prec & recall & f1 & accuracy & test prec & recall & f1 & accuracy \n",
+      "5 & 0.8862 & 0.8915 & 0.8833 & 0.8915 & 0.3833 & 0.8371 & 0.8513 & 0.8365 & 0.8513 & 0.2847 \\\\ \\hline\n",
+      "10 & 0.9710 & 0.9711 & 0.9710 & 0.9711 & 0.7685 & 0.8320 & 0.8396 & 0.8350 & 0.8396 & 0.2607 \\\\ \\hline\n",
+      "25 & 0.9996 & 0.9996 & 0.9996 & 0.9996 & 0.9960 & 0.8122 & 0.8150 & 0.8135 & 0.8150 & 0.2108 \\\\ \\hline\n",
+      "50 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 0.8099 & 0.8122 & 0.8110 & 0.8122 & 0.2073 \\\\ \\hline\n",
+      "75 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 0.8098 & 0.8121 & 0.8109 & 0.8121 & 0.2069 \\\\ \\hline\n",
+      "100 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 0.8098 & 0.8121 & 0.8109 & 0.8121 & 0.2069 \\\\ \\hline\n",
+      "./data/DATA_WORD2VEC_HADM_TOP10\n",
+      "Train, Test: 39544 13182\n",
+      "iter & train prec & recall & f1 & accuracy & test prec & recall & f1 & accuracy \n",
+      "5 & 0.7852 & 0.8255 & 0.7868 & 0.8255 & 0.2429 & 0.7836 & 0.8242 & 0.7855 & 0.8242 & 0.2400 \\\\ \\hline\n",
+      "10 & 0.8037 & 0.8329 & 0.7998 & 0.8329 & 0.2516 & 0.7992 & 0.8313 & 0.7977 & 0.8313 & 0.2458 \\\\ \\hline\n",
+      "25 & 0.8098 & 0.8364 & 0.8060 & 0.8364 & 0.2581 & 0.8038 & 0.8340 & 0.8029 & 0.8340 & 0.2519 \\\\ \\hline\n",
+      "50 & 0.8098 & 0.8365 & 0.8060 & 0.8365 & 0.2581 & 0.8042 & 0.8342 & 0.8032 & 0.8342 & 0.2525 \\\\ \\hline\n",
+      "75 & 0.8098 & 0.8364 & 0.8060 & 0.8364 & 0.2585 & 0.8044 & 0.8343 & 0.8034 & 0.8343 & 0.2530 \\\\ \\hline\n",
+      "100 & 0.8100 & 0.8365 & 0.8061 & 0.8365 & 0.2593 & 0.8045 & 0.8345 & 0.8036 & 0.8345 & 0.2537 \\\\ \\hline\n"
      ]
     }
    ],
    "source": [
-    "for maxDepth in [5, 10, 20, 30]:\n",
-    "    clr = CustomRandomForestClassifier()\n",
-    "    clr.fit(df_train, maxDepth=maxDepth)\n",
-    "    df_pred_train = clr.predict(df_train)\n",
-    "    df_pred_test = clr.predict(df_test)\n",
-    "\n",
-    "    print \"maxDepth: \", maxDepth\n",
-    "    print evaluate(df_pred_train, clr.labelCols)\n",
-    "    print evaluate(df_pred_test, clr.labelCols)"
+    "run_experiment(\"./data/DATA_TFIDFV0_HADM_TOP10\")\n",
+    "run_experiment(\"./data/DATA_TFIDFV1_HADM_TOP10\")\n",
+    "run_experiment(\"./data/DATA_WORD2VEC_HADM_TOP10\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print \"Done!\""
    ]
   },
   {
