--- a/code/ml_baseline.ipynb
+++ b/code/ml_baseline.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -326,6 +326,13 @@
     "        \n",
     "        print print_latex(maxDepth, r1, r2, r3, r4)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### TFIDFV0, V1 and  WORD2VEC V0, V1, V2"
    ]
   },
   {
@@ -894,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -905,13 +912,86 @@
      "text": [
       "./data/DATA_WORD2VECV1_HADM_TOP50CAT\n",
       "Train, Test: 26363 13182\n",
-      "iter & train prec & recall & f1 & accuracy & em & test prec & recall & f1 & accuracy & em\n"
+      "iter & train prec & recall & f1 & accuracy & em & test prec & recall & f1 & accuracy & em\n",
+      "20 & 0.9998 & 0.9371 & 0.9669 & 0.9942 & 0.8501 & 0.4994 & 0.1107 & 0.1506 & 0.8832 & 0.0713 \\\\ \\hline\n",
+      "./data/DATA_WORD2VECV2_HADM_TOP50CAT\n",
+      "Train, Test: 26363 13182\n",
+      "iter & train prec & recall & f1 & accuracy & em & test prec & recall & f1 & accuracy & em\n",
+      "5 & 0.2534 & 0.0540 & 0.0720 & 0.8816 & 0.0711 & 0.2214 & 0.0512 & 0.0677 & 0.8800 & 0.0716 \\\\ \\hline\n",
+      "10 & 0.9799 & 0.2167 & 0.3042 & 0.9082 & 0.1022 & 0.4998 & 0.0915 & 0.1249 & 0.8843 & 0.0733 \\\\ \\hline\n"
      ]
     }
    ],
    "source": [
     "run_experiment2(\"./data/DATA_WORD2VECV1_HADM_TOP50CAT\", depths=[20])\n",
     "run_experiment2(\"./data/DATA_WORD2VECV2_HADM_TOP50CAT\", depths=[5, 10, 20])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "./data/DATA_WORD2VECV2_HADM_TOP50CAT\n",
+      "Train, Test: 26363 13182\n",
+      "iter & train prec & recall & f1 & accuracy & em & test prec & recall & f1 & accuracy & em\n"
+     ]
+    }
+   ],
+   "source": [
+    "run_experiment2(\"./data/DATA_WORD2VECV2_HADM_TOP50CAT\", depths=[20])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### WORD2VECV3 and V4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#TODO: run these. From the results, fill up Table 5\n",
+    "run_experiment(\"./data/DATA_WORD2VECV3_HADM_TOP10\")\n",
+    "run_experiment(\"./data/DATA_WORD2VECV4_HADM_TOP10\")\n",
+    "run_experiment2(\"./data/DATA_WORD2VECV3_HADM_TOP10\")\n",
+    "run_experiment2(\"./data/DATA_WORD2VECV4_HADM_TOP10\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### DOC2VEC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#TODO: run these after DOC2VEC feature extraction is implemented. From the results, fill up Table 5\n",
+    "run_experiment(\"./data/DATA_DOC2VECV0_HADM_TOP10\")\n",
+    "run_experiment(\"./data/DATA_DOC2VECV1_HADM_TOP10\")\n",
+    "run_experiment(\"./data/DATA_DOC2VECV2_HADM_TOP10\")\n",
+    "run_experiment2(\"./data/DATA_DOC2VECV0_HADM_TOP10\")\n",
+    "run_experiment2(\"./data/DATA_DOC2VECV1_HADM_TOP10\")\n",
+    "run_experiment2(\"./data/DATA_DOC2VECV2_HADM_TOP10\")"
    ]
   },
   {
