--- a/code/Project_bdfh_doc2vec-clean-v3.ipynb
+++ b/code/Project_bdfh_doc2vec-clean-v3.ipynb
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 237,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -546,33 +546,14 @@
    },
    "outputs": [],
    "source": [
+    "import gensim\n",
     "# saves the doc2vec model to be used later.\n",
     "#model_dm.save('./data/model_doc2vec_v2_600dim')\n",
     "\n",
     "# open a saved doc2vec model \n",
-    "import gensim\n",
-    "#model_dm=gensim.models.Doc2Vec.load('./data/model_doc2vec_v2_300dim')\n",
+    "model_dm=gensim.models.Doc2Vec.load('./data/model_doc2vec_v2_600dim')\n",
     "\n",
     "#model_dm.wv.save_word2vec_format('./data/model_doc2vec_v2_600dim.txt', binary=False)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "#import gensim\n",
-    "test_set=[]\n",
-    "#model_dm_300dim=[]\n",
-    "for row in df_hadm_top10.iloc[idx_test]['text']:\n",
-    "        test_set.append(model_dm.infer_vector(row))\n",
-    "\n",
-    "#model_dm_300dim=df_hadm_top10['text'].apply(model_dm.infer_vector)"
    ]
   },
   {
@@ -594,18 +575,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 238,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "model_dm_300dim=test_set_clean.apply(model_dm.infer_vector)"
+    "model_dm_600dim=test_set_clean.apply(model_dm.infer_vector)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 239,
    "metadata": {
     "collapsed": false
    },
@@ -615,26 +596,50 @@
     "\n",
     "train_d2v=np.asarray(model_dm.docvecs)\n",
     "df_train_d2v = pd.DataFrame(data=train_d2v, index=idx_join_train)\n",
-    "test_d2v = [tuple(x) for x in model_dm_300dim]\n",
+    "test_d2v = [tuple(x) for x in model_dm_600dim]\n",
     "df_test_d2v = pd.DataFrame(data=test_d2v, index=idx_test)\n",
     "df_d2v = pd.concat([df_train_d2v,df_test_d2v])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 240,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "52726"
+      ]
+     },
+     "execution_count": 240,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#len(model_dm.docvecs)\n",
+    "#test_set_clean.iloc[0]\n",
+    "len(df_d2v)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 242,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "#save to drive            \n",
-    "df_d2v.to_csv(\"model_doc2vec_v2_300dim_final.csv\")"
+    "df_d2v.to_csv(\"model_doc2vec_v2_600dim_final.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 241,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -656,7 +661,7 @@
        " ('lipoma', 0.29490727186203003)]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 241,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -668,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 243,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -690,7 +695,7 @@
        " ('note_790', 0.37038496136665344)]"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 243,
      "metadata": {},
      "output_type": "execute_result"
     }
